hphp/hack/test/typecheck/collection_non_static.php.exp
File "collection_non_static.php", line 8, characters 38-42:
Expected constant expression for initializer (Parsing[1002])
File "collection_non_static.php", line 8, characters 38-42:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "collection_non_static.php", line 8, characters 29-47:
  From this declaration, the context of this function body provides the capability set {}
  File "collection_non_static.php", line 3, characters 10-12:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
